Ticket #181: Fixing layout on mobile

--- a/src/app/notifications/notifications.component.scss
+++ b/src/app/notifications/notifications.component.scss
@@ -145,7 +145,7 @@
             }
             .body {
               width: 60%;
-              min-width: 300px;
+              min-width: 200px;
             }
             &.not-read {
                 background-color: rgba(theme-color("light"),0.15);
@@ -201,4 +201,11 @@
           cursor: pointer;
         }
     }
+}
+
+@media screen and (max-width: 600px) {
+  .notifications-panel {
+    width: 100%;
+    min-width: auto;
+  }
 }
